--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ h2{margin:0 0 20px 0}
   background: linear-gradient(135deg, #2b2f77, #1b9aaa);
   border-radius: 18px;
   padding: 0.2rem 0.3rem;
-  margin: .5rem 0;
+  margin: 1rem 0.9;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.35);
 }
 
