--- a/style.css
+++ b/style.css
@@ -163,6 +163,20 @@ h2{margin:0 0 20px 0}
   padding-left: 28px;
 }
 
+.avatar-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.avatar-credit {
+  margin-top: 0.3em;
+  font-size: 0.75em;
+  color: #666;
+  font-style: italic;
+}
+
+
 .timeline::before {
   content: "";
   position: absolute;
