--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ h2{margin:0 0 20px 0}
 .avatar-credit {
   margin-top: 0.3em;
   font-size: 0.75em;
-  color: #666;
+  color: #ffffff;
   font-style: italic;
 }
 
