--- a/style.css
+++ b/style.css
@@ -213,13 +213,13 @@ html {
   border-radius: 18px;
   padding: 0.2rem 0.3rem;
   margin: 1rem 0.9;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.35);
+  box-shadow: 0 10px 30px linear-gradient(135deg, #2b2f77, #1b9aaa);
 }
 
 .tutoring-button {
   padding: 0.3em 0.7em;
   border-radius: 999px;
-  background: linear-gradient(3deg, #2b2f77, #1b9aaa);
+  background: linear-gradient(135deg, #2b2f77, #1b9aaa);
   color: white;
   text-decoration: none;
 }
